# Colab-Brigde

./: README.md
clients/js/: package.json  tsconfig.json
clients/js/src/: index.ts
examples/echo/: colab_server.ipynb  server.py
examples/echo/web/: index.html
examples/image_classifier/: colab_server.ipynb  server.py
examples/image_classifier/web/: index.html
registry/: Dockerfile  README.md  railway.json  registry.py
server/: pyproject.toml  requirements-dev.txt
server/colabbridge/: __init__.py  bridge.py  registry.py  tunnel.py
server/examples/: echo_server.py  image_classifier_server.py
