[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colabbridge-server"
version = "0.1.0"
description = "Run GPU compute on Google Colab and connect any app or website to it"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["colab", "gpu", "websocket", "inference", "cloudflare", "tunnel"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
    "pydantic>=2",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.urls]
Repository = "https://github.com/yourusername/colabbridge"
Documentation = "https://github.com/yourusername/colabbridge#readme"

[tool.hatch.build.targets.wheel]
packages = ["colabbridge"]
